<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="#fc970b"
    tools:context="com.penrosewharf.brian.weatherly.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/temperatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/temp_celc"
        android:textColor="@android:color/white"
        android:textSize="150sp"/>

    <ImageView
        android:id="@+id/degreeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/temperatureLabel"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/temperatureLabel"
        android:layout_toRightOf="@+id/temperatureLabel"
        android:elevation="1dp"
        app:srcCompat="@mipmap/degree"
        android:contentDescription=""/>

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/temperatureLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/time"
        android:textColor="#80ffffff"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timeLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/time_zone"
        android:textColor="@android:color/white"
        android:textSize="24sp"/>

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/locationLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp"
        app:srcCompat="@mipmap/cloudy_night"/>

    <TextView
        android:id="@+id/summaryLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/getting_current_forecast"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/humidityLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="HUMIDITY"
                android:textColor="#80ffffff"/>

            <TextView
                android:id="@+id/humidityValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="--"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/precipLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="RAIN/SNOW"
                android:textColor="#80ffffff"/>

            <TextView
                android:id="@+id/precipValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="--"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/refreshImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/refresh"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/refreshImageView"
        android:layout_alignBaseline="@+id/refreshImageView"
        android:layout_alignBottom="@+id/refreshImageView"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/progress_bar_refresh"/>

</RelativeLayout>
